// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Context Button Default 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "space-between",
      "padding": "3em",
    }
  }
>
  <button
    className="sc-AxjAm iCsitV"
    size="large"
  >
    Button
  </button>
  <button
    className="sc-AxjAm jlgLyE"
    size="default"
  >
    Button
  </button>
  <button
    className="sc-AxjAm hqdKRo"
    size="small"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Context Button Disabled 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "space-between",
      "padding": "3em",
    }
  }
>
  <button
    className="sc-AxjAm dSVHyr"
    disabled={true}
    size="large"
  >
    Button
  </button>
  <button
    className="sc-AxjAm iTSDsm"
    disabled={true}
    size="default"
  >
    Button
  </button>
  <button
    className="sc-AxjAm jUtoCW"
    disabled={true}
    size="small"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Context Button Hidden 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "space-between",
      "padding": "3em",
    }
  }
>
  <button
    className="sc-AxjAm fvCvCV"
    hidden={true}
    size="large"
  >
    Button
  </button>
  <button
    className="sc-AxjAm fmRHQY"
    hidden={true}
    size="default"
  >
    Button
  </button>
  <button
    className="sc-AxjAm jUxukg"
    hidden={true}
    size="small"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Context Button Icon 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "space-between",
      "padding": "3em",
    }
  }
/>
`;

exports[`Storyshots Link Default 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "space-between",
      "padding": "3em",
    }
  }
>
  <button
    className="sc-AxiKw DMwMp"
    size="large"
  >
    Button
  </button>
  <button
    className="sc-AxiKw gUvXOY"
    size="default"
  >
    Button
  </button>
  <button
    className="sc-AxiKw oodhk"
    size="small"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Link Disabled 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "space-between",
      "padding": "3em",
    }
  }
>
  <button
    className="sc-AxiKw jWlzdb"
    disabled={true}
    size="large"
  >
    Button
  </button>
  <button
    className="sc-AxiKw hKEgtS"
    disabled={true}
    size="default"
  >
    Button
  </button>
  <button
    className="sc-AxiKw jmOWUu"
    disabled={true}
    size="small"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Link Hidden 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "space-between",
      "padding": "3em",
    }
  }
>
  <button
    className="sc-AxiKw bTDaaJ"
    hidden={true}
    size="large"
  >
    Button
  </button>
  <button
    className="sc-AxiKw jrkrYo"
    hidden={true}
    size="default"
  >
    Button
  </button>
  <button
    className="sc-AxiKw iyaEQ"
    hidden={true}
    size="small"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Primary Button Default 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "space-between",
      "padding": "3em",
    }
  }
>
  <button
    className="sc-AxjAm iCsitV"
    size="large"
  >
    Button
  </button>
  <button
    className="sc-AxjAm jlgLyE"
    size="default"
  >
    Button
  </button>
  <button
    className="sc-AxjAm hqdKRo"
    size="small"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Primary Button Disabled 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "space-between",
      "padding": "3em",
    }
  }
>
  <button
    className="sc-AxjAm dSVHyr"
    disabled={true}
    size="large"
  >
    Button
  </button>
  <button
    className="sc-AxjAm iTSDsm"
    disabled={true}
    size="default"
  >
    Button
  </button>
  <button
    className="sc-AxjAm jUtoCW"
    disabled={true}
    size="small"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Primary Button Hidden 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "space-between",
      "padding": "3em",
    }
  }
>
  <button
    className="sc-AxjAm fvCvCV"
    hidden={true}
    size="large"
  >
    Button
  </button>
  <button
    className="sc-AxjAm fmRHQY"
    hidden={true}
    size="default"
  >
    Button
  </button>
  <button
    className="sc-AxjAm jUxukg"
    hidden={true}
    size="small"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Secondary Button Default 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "space-between",
      "padding": "3em",
    }
  }
>
  <button
    className="sc-AxirZ cbwkWW"
    size="large"
  >
    Button
  </button>
  <button
    className="sc-AxirZ egyXUn"
    size="default"
  >
    Button
  </button>
  <button
    className="sc-AxirZ dLTMFf"
    size="small"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Secondary Button Disabled 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "space-between",
      "padding": "3em",
    }
  }
>
  <button
    className="sc-AxirZ drlagI"
    disabled={true}
    size="large"
  >
    Button
  </button>
  <button
    className="sc-AxirZ efVwbR"
    disabled={true}
    size="default"
  >
    Button
  </button>
  <button
    className="sc-AxirZ eAAkUd"
    disabled={true}
    size="small"
  >
    Button
  </button>
</div>
`;

exports[`Storyshots Secondary Button Hidden 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "space-between",
      "padding": "3em",
    }
  }
>
  <button
    className="sc-AxirZ vXGmK"
    hidden={true}
    size="large"
  >
    Button
  </button>
  <button
    className="sc-AxirZ bKOTZL"
    hidden={true}
    size="default"
  >
    Button
  </button>
  <button
    className="sc-AxirZ GMRBP"
    hidden={true}
    size="small"
  >
    Button
  </button>
</div>
`;
